complete cleanup + index.html complete fix
fixed website not showing up when using default URL

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <source src="assets/final_film_web.mp4" type="video/mp4">
           Videoformat wird nicht unterstützt in deinem Browser.
         </video>
-        <a href="https://youtu.be/OtK_8kkU_qw">Der Film gibt es auch in höherer Qualität</a>
+        <a href="https://youtu.be/OtK_8kkU_qw">Github lässt keine grossen Dateien zu. Dies ist der Youtube link zum Film</a>
       </section>
       <section id="konzept">
         <h1>Konzept</h1>
@@ -57,6 +57,7 @@
         <a href="gregory/Main.html"><li>Gregory</li></a>
         <a href="nico/index.html"><li>Nicolas</li></a>
         <a href="tharmila/übermich.html"><li>Tharmila</li></a>
+        <a href="https://youtu.be/OtK_8kkU_qw">Film</a>
       </ul>
     </div>
     <script src="js/jquery.js"></script>
