--- a/nico/day2.html
+++ b/nico/day2.html
@@ -15,10 +15,10 @@
       <h1>Navigation</h1>
       <ul id="navbtns">
         <a class="navbtn" href="../index.html"><li>Zurück</li></a>
-        <a class="navbtn" href="index.html"><li>Über Mich</li></a>
+        <a class="navbtn" href="nico.html"><li>Über Mich</li></a>
         <a class="navbtn" href="gruppenarbeit.html"><li>Gruppenarbeit</li></a>
         <a class="navbtn" href="day1.html"><li>Journal 13.12.</li></a>
-        <a class="navbtn" href="day2.html"><li>Journal 20.12.</li></a>
+        <a class="navbtn active" href="day2.html"><li>Journal 20.12.</li></a>
         <a class="navbtn" href="day3.html"><li>Journal 10.01.</li></a>
         <a class="navbtn" href="day4.html"><li>Journal 17.01.</li></a>
       </ul>
