--- a/nico/gruppenarbeit.html
+++ b/nico/gruppenarbeit.html
@@ -15,8 +15,8 @@
       <h1>Navigation</h1>
       <ul id="navbtns">
         <a class="navbtn" href="../index.html"><li>Zurück</li></a>
-        <a class="navbtn" href="index.html"><li>Über Mich</li></a>
-        <a class="navbtn" href="gruppenarbeit.html"><li>Gruppenarbeit</li></a>
+        <a class="navbtn" href="nico.html"><li>Über Mich</li></a>
+        <a class="navbtn active" href="gruppenarbeit.html"><li>Gruppenarbeit</li></a>
         <a class="navbtn" href="day1.html"><li>Journal 13.12.</li></a>
         <a class="navbtn" href="day2.html"><li>Journal 20.12.</li></a>
         <a class="navbtn" href="day3.html"><li>Journal 10.01.</li></a>
@@ -30,7 +30,32 @@
       <img src="img/bizeps.jpg" alt="gruppenfoto" id="hdrimg">
     </div>
     <div id="content">
-
+      <h1>Gruppenarbeit</h1>
+      <p>
+        Ich war für die erstellung der Webseite, Storyboards und für den Film
+        zuständig.
+      </p>
+      <h2>Storyboards</h2>
+      <p>
+        Links ist das Storyboard für Google abgebildet
+        und rechts das Storyboard für Bing.
+      </p>
+      <img class="storyboard" src="img/StoryboardGoogle.jpg" alt="StoryboardGoogle">
+      <img class="storyboard" src="img/StoryboardBing.jpg" alt="StoryboardBing">
+      <h2>Website</h2>
+      <p>
+        Das Wireframe welches wir hatten, war einbisschen wenig
+        und habe somit einbisschen improvisiert.
+      </p>
+      <h2>Film</h2>
+      <p>
+        Für den Film musste ich sehr viel im Hintergrund machen
+        was erklärt das ich nicht so lange vor der Kamera stehe.
+        Mein Schneideprogramm ist Adobe Premiere Pro, die gekaufte Version.
+        Ich bin ziemlich vertraut mit der Premiere Pro Umgebung da ich schon
+        einige Videoprojekte realisiert habe, diese sind jedoch Qualitativ
+        hochwertiger als diser Film.
+      </p>
     </div>
   <script src="js/script.js"></script>
   </body>
