--- a/nico/day4.html
+++ b/nico/day4.html
@@ -15,12 +15,12 @@
       <h1>Navigation</h1>
       <ul id="navbtns">
         <a class="navbtn" href="../index.html"><li>Zurück</li></a>
-        <a class="navbtn" href="index.html"><li>Über Mich</li></a>
+        <a class="navbtn" href="nico.html"><li>Über Mich</li></a>
         <a class="navbtn" href="gruppenarbeit.html"><li>Gruppenarbeit</li></a>
         <a class="navbtn" href="day1.html"><li>Journal 13.12.</li></a>
         <a class="navbtn" href="day2.html"><li>Journal 20.12.</li></a>
         <a class="navbtn" href="day3.html"><li>Journal 10.01.</li></a>
-        <a class="navbtn" href="day4.html"><li>Journal 17.01.</li></a>
+        <a class="navbtn active" href="day4.html"><li>Journal 17.01.</li></a>
       </ul>
       <div id="closebtn" class="navbtn" onclick="menuaction()">
         Schliessen X
@@ -34,7 +34,7 @@
       </ul>
       <h2>Selbstständig verfasster Text mit neuen Erkenntnissen der Unterrichtseinheit</h2>
       <div class="border">
-        <p>Wir haben alle Szenen fpr den Sketch gefilmt</p>
+        <p>Wir haben alle Szenen für den Sketch gefilmt</p>
       </div>
       <h2>Abgleich mit den Handlungskompetenz, welche heute ich heute erreicht?</h2>
       <div class="border"></div>
