--- a/nico/nico.html
+++ b/nico/nico.html
@@ -15,7 +15,7 @@
       <h1>Navigation</h1>
       <ul id="navbtns">
         <a class="navbtn" href="../index.html"><li>Zurück</li></a>
-        <a class="navbtn" href="index.html"><li>Über Mich</li></a>
+        <a class="navbtn active" href="nico.html"><li>Über Mich</li></a>
         <a class="navbtn" href="gruppenarbeit.html"><li>Gruppenarbeit</li></a>
         <a class="navbtn" href="day1.html"><li>Journal 13.12.</li></a>
         <a class="navbtn" href="day2.html"><li>Journal 20.12.</li></a>
@@ -34,7 +34,7 @@
       <p>
         Ich heisse Nicolas Utzinger, 19 Jahre alt und aus Winterthur,
         jedoch kürzlich nach Dietikon umgezogen.
-        Schon als Kind habe ich mich mit Computern befasst. 
+        Schon als Kind habe ich mich mit Computern befasst.
         Mein Vater spielte hierbei eine grosse Rolle.
         In der Freizeit beschäftige ich mich mit Fitness, um meinen Geist und Körper fit zu halten,
         das Schreiben von eigenen Webseiten zum Lernen von HTML, CSS, PHP und seit
